--- a/packages/create-rspress/tsconfig.json
+++ b/packages/create-rspress/tsconfig.json
@@ -10,6 +10,6 @@
     },
     "isolatedModules": true
   },
-  "include": ["src", "./modern.config.ts"],
+  "include": ["src"],
   "exclude": ["**/node_modules", "**/template/**"]
 }
