--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,7 +55,6 @@
     "@rspress/runtime": "workspace:*",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
-    "body-scroll-lock": "4.0.0-beta.0",
     "copy-to-clipboard": "^3.3.3",
     "enhanced-resolve": "5.17.1",
     "github-slugger": "^2.0.0",
@@ -63,12 +62,10 @@
     "hast-util-heading-rank": "^3.0.0",
     "html-to-text": "^9.0.5",
     "htmr": "^1.0.2",
-    "is-html": "^3.1.0",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^1.3.1",
     "node-fetch": "3.3.2",
     "nprogress": "^0.2.0",
-    "postcss": "8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
@@ -78,20 +75,16 @@
     "rehype-stringify": "^9.0.4",
     "remark": "^14.0.3",
     "remark-gfm": "3.0.1",
-    "remark-html": "^15.0.2",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
     "rspack-plugin-virtual-module": "0.1.13",
-    "source-map": "0.7.4",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
-    "unist-util-visit-children": "^3.0.0",
-    "yaml-front-matter": "^4.1.1"
+    "unist-util-visit-children": "^3.0.0"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.62.0",
     "@modern-js/tsconfig": "2.62.0",
-    "@types/body-scroll-lock": "^3.1.2",
     "@types/hast": "3.0.4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
@@ -101,12 +94,11 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/yaml-front-matter": "^4.1.3",
+    "postcss": "8.4.49",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
-    "vitest": "2.1.4",
-    "webpack": "^5.96.1"
+    "vitest": "2.1.4"
   },
   "sideEffects": [
     "*.css",
