--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -41,9 +41,6 @@
     "body-scroll-lock": "4.0.0-beta.0",
     "copy-to-clipboard": "^3.3.3",
     "flexsearch": "0.7.43",
-    "github-slugger": "^2.0.0",
-    "hast-util-from-html": "^2.0.3",
-    "html-to-text": "^9.0.5",
     "htmlparser2": "^9.1.0",
     "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
@@ -52,15 +49,13 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-syntax-highlighter": "^15.6.1",
-    "react-transition-group": "4.4.5",
-    "rspack-plugin-virtual-module": "0.1.13"
+    "react-transition-group": "4.4.5"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.62.0",
     "@modern-js/tsconfig": "2.62.0",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/hast": "3.0.4",
-    "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
     "@types/mdast": "^4.0.4",
@@ -71,8 +66,7 @@
     "gray-matter": "4.0.3",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
-    "vitest": "2.1.4",
-    "webpack": "^5.96.1"
+    "vitest": "2.1.4"
   },
   "sideEffects": [
     "*.css",
