--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "change": "changeset",
     "changeset": "changeset",
-    "prepare": "pnpm run build && husky install",
+    "prepare": "pnpm run build && husky",
     "check-spell": "npx cspell",
     "check-dependency-version": "check-dependency-version-consistency . --dep-type devDependencies",
     "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/*",
@@ -56,7 +56,7 @@
     "execa": "8.0.1",
     "fs-extra": "11.2.0",
     "get-port": "5.1.1",
-    "husky": "^8.0.3",
+    "husky": "^9.1.6",
     "lint-staged": "~15.2.10",
     "nx": "20.0.8",
     "playwright": "1.47.2",
