--- a/.github/workflows/release-pull-request-with-modernjs.yml
+++ b/.github/workflows/release-pull-request-with-modernjs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 22.x
           cache: 'pnpm'
 
       - name: Nx Cache
