--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: E2E Test
         if: ${{steps.skip-ci.outputs.RESULT != 'true'}}
-        run: npx playwright install --with-deps && pnpm run test:e2e
+        run: npx playwright install --with-deps chromium && pnpm run test:e2e
 
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
