--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -22,14 +22,14 @@
     "node": ">=14.17.6"
   },
   "dependencies": {
-    "@modern-js/utils": "2.62.0",
+    "@rspress/shared": "workspace:*",
+    "chokidar": "^3.6.0",
     "documentation": "14.0.3",
     "react-docgen-typescript": "2.2.2",
     "react-markdown": "8.0.7",
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
-    "@rspress/shared": "workspace:*",
     "@types/mdast": "^4.0.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.12",
