--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -48,8 +48,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "react-transition-group": "4.4.5"
+    "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.62.0",
