--- a/packages/plugin-rss/tsconfig.tools.json
+++ b/packages/plugin-rss/tsconfig.tools.json
@@ -2,12 +2,12 @@
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
     "composite": true,
-    "declaration": false,
-    "module": "Node16",
+    "declaration": true,
+    "module": "ESNext",
     "target": "ES2020",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "Node16",
+    "moduleResolution": "bundler",
     "noEmit": true
   },
   "include": ["modern.config.ts", "vitest.config.ts"]
