--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -14,8 +14,8 @@
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "scripts": {
-    "dev": "modern build -w",
-    "build": "modern build",
+    "dev": "rslib build -w",
+    "build": "rslib build",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@modern-js/tsconfig": "2.62.1",
+    "@rslib/core": "0.1.0",
+    "@microsoft/api-extractor": "^7.48.0",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
