--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,13 +28,10 @@
     }
   },
   "scripts": {
-    "dev": "modern build -w",
-    "build": "modern build",
-    "build:watch": "modern build -w",
+    "dev": "rslib build -w",
+    "build": "rslib build",
     "test": "vitest run",
-    "reset": "rimraf ./**/node_modules",
-    "new": "modern new",
-    "upgrade": "modern upgrade"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rsbuild/core": "~1.1.4",
@@ -45,6 +42,8 @@
     "chokidar": "^3.6.0"
   },
   "devDependencies": {
+    "@rslib/core": "0.1.0",
+    "@microsoft/api-extractor": "^7.48.0",
     "@types/jest": "~29.5.14",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.12",
