--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -13,7 +13,7 @@
   "include": [
     "src",
     "vitest.config.ts",
-    "modern.config.ts",
+    "rslib.config.ts",
     "runtime.ts",
     "theme.ts"
   ],
