--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -13,8 +13,8 @@
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "scripts": {
-    "dev": "modern build -w",
-    "build": "modern build",
+    "dev": "rslib build -w",
+    "build": "rslib build",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
@@ -30,6 +30,8 @@
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
+    "@rslib/core": "0.1.0",
+    "@microsoft/api-extractor": "^7.48.0",
     "@types/mdast": "^4.0.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.12",
