--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -39,7 +39,8 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.12",
     "react": "^18.3.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vitest": "2.1.5"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
