--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,8 +30,8 @@
     }
   },
   "scripts": {
-    "dev": "modern build -w",
-    "build": "modern build",
+    "dev": "rslib build -w",
+    "build": "rslib build",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
@@ -79,6 +79,8 @@
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.62.1",
     "@modern-js/tsconfig": "2.62.1",
+    "@rslib/core": "0.1.0",
+    "@microsoft/api-extractor": "^7.48.0",
     "@types/hast": "3.0.4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
