--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -20,7 +20,7 @@
   "include": [
     "src",
     "vitest.config.ts",
-    "./modern.config.ts",
+    "./rslib.config.ts",
     "./tailwind.config.ts"
   ],
   "exclude": ["runtime.ts", "theme.ts", "node_modules"]
