--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ doc_build/
 test-results/
 
 playwright-report/
+
+# plugin-typedoc auto-generated files
+e2e/fixtures/plugin-typedoc/single/doc/api
+e2e/fixtures/plugin-typedoc/multi/doc/api
