--- a/.github/ISSUE_TEMPLATE/bug-report.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.en-US.yml
@@ -1,6 +1,7 @@
 name: '🐞 Bug Report'
 description: Report a Bug to Rspress
 title: '[Bug]: '
+type: Bug
 labels: ['🐞 bug']
 body:
   - type: markdown
