--- a/.github/ISSUE_TEMPLATE/feature-request.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.en-US.yml
@@ -1,6 +1,7 @@
 name: '💡 Feature Request'
 description: Submit a new feature request to Rspress
 title: '[Feature]: '
+type: Enhancement
 labels: ['💡 feature']
 body:
   - type: markdown
