--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -44,6 +44,7 @@
     "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
+    "github-slugger": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
