feat: bump shiki to v1, migrate to official transformers

--- a/e2e/fixtures/plugin-shiki/package.json
+++ b/e2e/fixtures/plugin-shiki/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@rspress/plugin-shiki": "workspace:*",
+    "@shikijs/transformers": "1.24.2",
     "rspress": "workspace:*"
   },
   "devDependencies": {
