chore(CI): remove issue_comment trigger

--- a/.github/workflows/bench-pr.yml
+++ b/.github/workflows/bench-pr.yml
@@ -1,8 +1,9 @@
 name: Benchmark PR
 
-on:
-  issue_comment:
-    types: [created]
+# TODO: switch to workflow_dispatch
+# on:
+#   issue_comment:
+#     types: [created]
 
 # cancel previous job runs for the same workflow + pr
 concurrency:
