--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,18 +3,19 @@ name: Release
 on:
   workflow_dispatch:
     inputs:
-      version:
+      npm_tag:
         type: choice
-        description: 'Release Version(next, beta, alpha, latest)'
+        description: 'Specify npm tag'
         required: true
-        default: 'next'
+        default: 'alpha'
         options:
-          - next
-          - beta
           - alpha
+          - beta
+          - rc
+          - canary
           - latest
       branch:
-        description: 'Release Branch(confirm release branch)'
+        description: 'Branch to release'
         required: true
         default: 'main'
 
@@ -26,11 +27,12 @@ jobs:
     name: Release
     if: github.repository == 'web-infra-dev/rspress' && github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 5
+          fetch-depth: 1
 
       - name: Install Pnpm
         run: corepack enable
@@ -44,28 +46,12 @@ jobs:
       - name: Install npm v9
         run: npm install -g npm@9
 
-      - name: Nx Cache
-        id: nx-cache
-        uses: actions/cache@v4
-        with:
-          path: .nx-cache
-          key: nx-${{ github.ref_name }}-${{ github.sha }}
-          restore-keys: |
-            nx-${{ github.ref_name }}-
-            nx-
-
       - name: Install Dependencies && Build
         run: pnpm install
 
-      - name: Release
-        uses: web-infra-dev/actions@v2
-        with:
-          version: ${{ github.event.inputs.version }}
-          branch: ${{ github.event.inputs.branch }}
-          type: 'release'
-          tools: 'changeset'
+      - name: Publish to npm
         env:
-          GITHUB_TOKEN: ${{ secrets.REPO_SCOPED_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          REPOSITORY: ${{ github.repository }}
-          REF: ${{ github.ref }}
+          NPM_TOKEN: ${{ secrets.RSPRESS_NPM_TOKEN }}
+        run: |
+          npm config set "//registry.npmjs.org/:_authToken" "${NPM_TOKEN}"
+          pnpm -r publish --tag ${{ github.event.inputs.npm_tag }} --publish-branch ${{ github.event.inputs.branch }}
