--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,9 +5,7 @@
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
-  "fixed": [
-    ["@rspress/*", "rspress", "create-rspress", "@modern-js/plugin-rspress"]
-  ],
+  "fixed": [["@rspress/*", "rspress", "create-rspress"]],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true,
     "updateInternalDependents": "always"
