--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "engines": {
     "node": ">=16.18.1"
   },
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@10.0.0",
   "lint-staged": {
     "*.{ts,tsx,js,jsx,mjs,cjs}": [
       "biome check . --apply --organize-imports-enabled=false --no-errors-on-unmatched"
@@ -69,5 +69,13 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "core-js",
+      "esbuild",
+      "nx"
+    ]
   }
 }
