--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - 'packages/**'
   - 'e2e/**'
+  - '!**/compiled/**'
   - '!**/tests/**'
   - '!packages/create-rspress/template-basic'
