--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -35,8 +35,10 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.48.1",
     "@rslib/core": "0.2.2",
-    "@types/mdast": "^4.0.4",
+    "@types/mdast": "^3.0.0",
+    "mdast-util-mdx-jsx": "^2.0.0",
     "rehype-stringify": "^9.0.4",
+    "remark-mdx": "2.3.0",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
     "unified": "^10.1.2"
