--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -78,6 +78,7 @@
     "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^1.3.1",
+    "memfs": "^4.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
