--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,7 +42,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@rsbuild/core": "~1.1.13",
+    "@rsbuild/core": "1.2.0-beta.1",
     "@rspress/core": "workspace:*",
     "@rspress/shared": "workspace:*",
     "cac": "^6.7.14",
