--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -58,7 +58,7 @@
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@rsbuild/core": "~1.1.13",
+    "@rsbuild/core": "1.2.0-beta.1",
     "@rsbuild/plugin-less": "~1.1.0",
     "@rsbuild/plugin-react": "~1.1.0",
     "@rsbuild/plugin-sass": "~1.1.2",
