--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "change": "changeset",
     "changeset": "changeset",
     "check-dependency-version": "check-dependency-version-consistency . --dep-type devDependencies",
-    "check-spell": "npx cspell",
+    "check-spell": "npx cspell && heading-case",
     "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/* --exclude @rspress/docs",
     "dev:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:dev",
-    "format": "prettier . --write && biome check --write",
+    "format": "prettier . --write && biome check --write && heading-case --write",
     "generate-release-pr": "zx scripts/generateReleasePr.mjs",
     "lint": "biome check . --diagnostic-level=warn && prettier . --check && pnpm run check-spell",
     "prepare": "pnpm run build && husky",
@@ -47,6 +47,7 @@
     "execa": "8.0.1",
     "fs-extra": "11.2.0",
     "get-port": "5.1.1",
+    "heading-case": "^0.1.4",
     "husky": "^9.1.7",
     "lint-staged": "~15.3.0",
     "nx": "20.3.1",
