--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -38,6 +38,7 @@
     "@types/mdast": "^3.0.15",
     "mdast-util-mdx-jsx": "^2.1.4",
     "rehype-stringify": "^9.0.4",
+    "remark-directive": "^2.0.1",
     "remark-mdx": "2.3.0",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
