--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "execa": "8.0.1",
     "react": "^18.3.1",
     "typescript": "^5.5.3",
     "vitest": "2.1.8"
