--- a/packages/plugin-client-redirects/tsconfig.json
+++ b/packages/plugin-client-redirects/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
-    "declaration": false,
+    "composite": true,
+    "declaration": true,
     "module": "ESNext",
     "target": "ESNext",
     "jsx": "react-jsx",
@@ -14,6 +15,11 @@
       "@/*": ["./*"]
     }
   },
+  "references": [
+    {
+      "path": "../shared"
+    }
+  ],
   "include": ["src", "vitest.config.ts", "index.d.ts", "rslib.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
