--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
+    "composite": true,
+    "declaration": true,
+    "noEmit": false,
+    "declarationDir": "dist",
     "rootDir": "src",
     "baseUrl": ".",
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "esModuleInterop": true
   },
-  "include": ["./src/**/*"]
+  "references": [
+    {
+      "path": "../shared"
+    }
+  ],
+  "include": ["src"]
 }
