chore: remove useless .d.ts

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@modern-js/tsconfig/base",
   "declaration": true,
   "compilerOptions": {
+    "moduleResolution": "bundler",
     "module": "ESNext",
     "target": "ESNext",
     "baseUrl": "./",
