--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
+    "moduleResolution": "bundler",
     "strict": false,
     "declaration": true,
     "noEmit": false,
