--- a/packages/modern-plugin-rspress/tsconfig.json
+++ b/packages/modern-plugin-rspress/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
+    "moduleResolution": "bundler",
+    "module": "ESNext",
     "declaration": true,
     "noEmit": false,
     "outDir": "dist",
