--- a/packages/plugin-typedoc/tsconfig.json
+++ b/packages/plugin-typedoc/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
+    "moduleResolution": "bundler",
     "declaration": false,
     "module": "ESNext",
     "target": "ESNext",
