--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
     "target": "ES2019",
+    "module": "ESNext",
     "declaration": true,
     "outDir": "./dist",
     "jsx": "preserve",
