--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -25,8 +25,8 @@
     "static"
   ],
   "scripts": {
-    "build": "modern build",
-    "dev": "modern build -w",
+    "build": "rslib build",
+    "dev": "rslib build -w",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
@@ -35,6 +35,7 @@
     "feed": "^4.2.2"
   },
   "devDependencies": {
+    "@rslib/core": "0.4.0",
     "@rspress/runtime": "workspace:*",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
