build(core): use Rslib to build the package

--- a/e2e/fixtures/modern-js/package.json
+++ b/e2e/fixtures/modern-js/package.json
@@ -25,6 +25,7 @@
     "@arco-design/web-react": "^2.65.0"
   },
   "devDependencies": {
+    "@modern-js/module-tools": "2.64.0",
     "@rspress/modern-js-plugin": "workspace:*",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
