--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,8 +47,8 @@
     "theme.ts"
   ],
   "scripts": {
-    "build": "modern build",
-    "dev": "modern build -w",
+    "build": "rslib build",
+    "dev": "rslib build -w",
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
@@ -92,8 +92,9 @@
     "unist-util-visit-children": "^3.0.0"
   },
   "devDependencies": {
-    "@modern-js/plugin-tailwindcss": "2.64.0",
+    "@microsoft/api-extractor": "^7.49.2",
     "@modern-js/tsconfig": "2.64.0",
+    "@rslib/core": "0.4.0",
     "@types/hast": "3.0.4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
