--- a/packages/modern-plugin-rspress/package.json
+++ b/packages/modern-plugin-rspress/package.json
@@ -35,6 +35,7 @@
     "tinyglobby": "^0.2.10"
   },
   "devDependencies": {
+    "@modern-js/module-tools": "2.64.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
