--- a/packages/plugin-typedoc/tsconfig.json
+++ b/packages/plugin-typedoc/tsconfig.json
@@ -12,6 +12,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src", "vitest.config.ts", "index.d.ts", "modern.config.ts"],
+  "include": ["src", "vitest.config.ts", "index.d.ts", "rslib.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
