--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,7 +70,7 @@
     "enhanced-resolve": "5.18.0",
     "github-slugger": "^2.0.0",
     "hast-util-from-html": "^2.0.3",
-    "hast-util-heading-rank": "^3.0.0",
+    "hast-util-heading-rank": "^2.1.1",
     "html-to-text": "^9.0.5",
     "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
@@ -89,13 +89,14 @@
     "tinyglobby": "^0.2.10",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
-    "unist-util-visit-children": "^3.0.0"
+    "unist-util-visit-children": "^2.0.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
     "@modern-js/tsconfig": "2.64.0",
     "@rslib/core": "0.4.1",
-    "@types/hast": "3.0.4",
+    "@rspress-dev/plugin-preview": "link:../plugin-preview",
+    "@types/hast": "^2.3.10",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
