--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -35,6 +35,7 @@
     "@microsoft/api-extractor": "^7.49.2",
     "@rslib/core": "0.4.1",
     "@types/mdast": "^3.0.15",
+    "mdast-util-mdx-expression": "^1.3.2",
     "mdast-util-mdx-jsx": "^2.1.4",
     "rehype-stringify": "^9.0.4",
     "remark-directive": "^2.0.1",
