--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "mdast-util-mdx-jsx": "^2.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
