--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -10,8 +10,9 @@
   },
   "license": "MIT",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./index.d.ts",
   "files": [
+    "index.d.ts",
     "dist",
     "static"
   ],
@@ -39,6 +40,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "mdast-util-mdx-jsx": "^2.1.4",
     "mdast-util-mdxjs-esm": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
