--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -30,15 +30,15 @@
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
-    "hast-util-from-html": "2.0.3",
-    "shiki": "0.14.7",
-    "unist-util-visit": "5.0.0"
+    "hast-util-from-html": "^1.0.2",
+    "shiki": "^0.14.7",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
     "@modern-js/tsconfig": "2.64.0",
     "@rslib/core": "0.4.1",
-    "@types/hast": "3.0.4",
+    "@types/hast": "^2.3.10",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
