--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -53,6 +53,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
+    "mdast-util-mdx-jsx": "^2.1.4",
     "medium-zoom": "1.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.5.3"
