--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -67,7 +67,7 @@
     "@rsbuild/plugin-svgr": "^1.0.6",
     "@rslib/core": "0.4.1",
     "@types/body-scroll-lock": "^3.1.2",
-    "@types/hast": "3.0.4",
+    "@types/hast": "^2.3.10",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
     "@types/mdast": "^3.0.15",
