--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -88,9 +88,9 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@modern-js/tsconfig": "2.64.0",
     "@rslib/core": "0.4.1",
     "@rspress-dev/plugin-preview": "link:../plugin-preview",
+    "@rspress/config": "workspace:*",
     "@types/hast": "^2.3.10",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
