--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,20 +1,13 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
-    "moduleResolution": "bundler",
     "strict": false,
-    "declaration": true,
-    "noEmit": false,
     "declarationDir": "dist",
-    "module": "ESNext",
-    "target": "ESNext",
-    "jsx": "react-jsx",
     "baseUrl": "src",
     "rootDir": "src",
     "composite": true,
     "lib": ["ESNext", "DOM"],
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "noUnusedLocals": false
   },
   "include": ["src"],
   "references": [
