--- a/packages/create-rspress/tsconfig.json
+++ b/packages/create-rspress/tsconfig.json
@@ -1,12 +1,8 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "declaration": true,
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "module": "ESNext",
-    "target": "ESNext",
-    "baseUrl": "./",
-    "isolatedModules": true
+    "baseUrl": "./"
   },
   "include": ["src"],
   "exclude": ["**/node_modules", "**/template/**"]
