--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
     "jsx": "preserve",
     "moduleResolution": "bundler",
