--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@modern-js/tsconfig": "2.64.0",
     "@rslib/core": "0.4.1",
+    "@rspress/config": "workspace:*",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
