--- a/packages/plugin-medium-zoom/tsconfig.json
+++ b/packages/plugin-medium-zoom/tsconfig.json
@@ -1,19 +1,10 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "noEmit": false,
     "outDir": "dist",
     "composite": true,
-    "module": "ESNext",
-    "target": "ESNext",
-    "jsx": "react-jsx",
     "baseUrl": "src",
-    "rootDir": "src",
-    "lib": ["ESNext", "DOM"],
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "rootDir": "src"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
