--- a/packages/plugin-playground/tsconfig.json
+++ b/packages/plugin-playground/tsconfig.json
@@ -1,19 +1,10 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "declaration": true,
     "composite": true,
-    "noEmit": false,
-    "outDir": "dist",
-    "module": "ESNext",
-    "target": "ESNext",
-    "jsx": "react-jsx",
     "baseUrl": "src",
     "rootDir": "src",
-    "lib": ["ESNext", "DOM"],
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "noUnusedLocals": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
