--- a/packages/theme-default/tsconfig.json
+++ b/packages/theme-default/tsconfig.json
@@ -1,30 +1,18 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "declaration": true,
-    "noEmit": false,
-    "declarationDir": "dist",
     "composite": true,
-    "strict": true,
-    "module": "ESNext",
-    "target": "ESNext",
-    "jsx": "react-jsx",
-    "baseUrl": "src",
-    "rootDir": ".",
-    "lib": ["ESNext", "DOM"],
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "outDir": "dist",
+    "declarationDir": "dist",
+    "rootDir": "src",
+    "baseUrl": ".",
+    "noUnusedLocals": false,
     "paths": {
-      "#theme/*": ["./*"]
+      "#theme/*": ["./src/*"]
     }
   },
-  "include": [
-    "src",
-    "vitest.config.ts",
-    "./rslib.config.ts",
-    "./tailwind.config.ts"
-  ],
+  "include": ["src"],
+  "exclude": ["./src/node/source-build-plugin.ts"],
   "references": [
     {
       "path": "../runtime"
@@ -32,6 +20,5 @@
     {
       "path": "../shared"
     }
-  ],
-  "exclude": ["theme.ts", "node_modules"]
+  ]
 }
