--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
-  "extends": "@modern-js/tsconfig/base",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "ESNext",
     "declaration": true,
-    "outDir": "./dist",
-    "jsx": "preserve",
-    "baseUrl": "./",
-    "isolatedModules": true,
-    "paths": {}
+    "baseUrl": "./"
   },
   "include": [
     "vitest.workspace.ts",
