--- a/packages/plugin-api-docgen/tsconfig.json
+++ b/packages/plugin-api-docgen/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": "src",
-    "rootDir": "src",
-    "noUnusedLocals": false
+    "rootDir": "src"
   },
   "references": [
     {
