--- a/packages/create-rspress/package.json
+++ b/packages/create-rspress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-rspress",
-  "version": "1.42.1",
+  "version": "2.0.0-alpha.0",
   "description": "Create a new Rspress project",
   "homepage": "https://rspress.dev",
   "repository": {
