--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/plugin-playground",
-  "version": "1.42.1",
+  "version": "2.0.0-alpha.0",
   "description": "A plugin for rspress to preview the code block in markdown/mdx file.",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
