--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -50,7 +50,7 @@
     "unist-util-visit": "^4.1.2"
   },
   "peerDependencies": {
-    "@rspress/core": "workspace:^1.42.1",
+    "@rspress/core": "workspace:^2.0.0-alpha.0",
     "react": ">=17.0.0",
     "react-router-dom": "^6.8.1"
   },
