--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -43,7 +43,7 @@
   },
   "peerDependencies": {
     "react": ">=17.0.0",
-    "rspress": "workspace:^1.42.1"
+    "rspress": "workspace:^2.0.0-alpha.0"
   },
   "engines": {
     "node": ">=14.17.6"
