--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -42,7 +42,7 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "rspress": "workspace:^1.42.1"
+    "rspress": "workspace:^2.0.0-alpha.0"
   },
   "engines": {
     "node": ">=14.17.6"
