--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/plugin-typedoc",
-  "version": "1.42.1",
+  "version": "1.43.0-canary-202503021457",
   "description": "A plugin for rspress to integrate typedoc",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
@@ -42,7 +42,7 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "rspress": "workspace:^1.42.1"
+    "rspress": "workspace:^1.43.0-canary-202503021457"
   },
   "engines": {
     "node": ">=14.17.6"
