--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/theme-default",
-  "version": "1.42.1",
+  "version": "1.43.0-canary-202503021457",
   "description": "The Default Theme of Rspress Documentation Framework",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
