chore: bump to shiki v3

--- a/e2e/fixtures/plugin-shiki/package.json
+++ b/e2e/fixtures/plugin-shiki/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@rspress/plugin-shiki": "workspace:*",
-    "@shikijs/transformers": "1.24.2",
+    "@shikijs/transformers": "^3.1.0",
     "rspress": "workspace:*"
   },
   "devDependencies": {
