--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "change": "changeset",
     "changeset": "changeset",
     "check-dependency-version": "check-dependency-version-consistency . --dep-type devDependencies",
-    "check-spell": "npx cspell && heading-case",
+    "check-spell": "pnpm cspell && heading-case",
     "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/* --exclude @rspress/docs",
     "dev:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:dev",
     "format": "prettier . --write && biome check --write && heading-case --write",
@@ -41,6 +41,7 @@
     "check-dependency-version-consistency": "^5.0.0",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.6",
+    "cspell": "^8.17.5",
     "cspell-ban-words": "^0.0.4",
     "get-port": "5.1.1",
     "heading-case": "^0.1.4",
